[metadata]
name = peepingtom
url = https://github.com/gutsche-lab/peepingtom/
license = BSD 3-Clause
license_file = LICENSE
description = Python tool for visualising and interacting with cryo-ET and subtomogram averaging data.
long_description = file: README.md
long_description_content_type = text/markdown
author = PeepingTom Team
author_email = peepingtom_team@googlegroups.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: X11 Applications :: Qt
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS


[options]
zip_safe = False
packages = find:
python_requires = >= 3.8
include_package_data = True
install_requires =
    napari[all]>=0.4.8
    numpy
    xarray
    pandas
    scipy
    skimage
    pyqtgraph
    click
    dynamotable~=0.2.4
    eulerangles~=1.0.1
    mrcfile~=1.3.0
    starfile~=0.4.4
    emfile~=0.2


[options.extras_require]
dev =
    pytest
    pytest-qt


[options.entry_points]
console_scripts =
    peep = peepingtom.__main__:cli


[options.package_data]
* = *.txt, *.md


[flake8]
# E116, E117: unexpected indentations in comment (happens when commenting out code)
ignore = E116,E117
exclude = __init__.py,docs,examples
max-line-length = 120
