[metadata]
name = blik
url = https://github.com/gutsche-lab/blik
download_url = https://github.com/gutsche-lab/blik
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE
description = Python tool for visualising and interacting with cryo-ET and subtomogram averaging data.
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
author = Blik Team
author_email = blik-team@googlegroups.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: X11 Applications :: Qt
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Framework :: napari
project_urls =
    Bug Tracker = https://github.com/gutsche-lab/blik/issues
    Documentation = https://github.com/gutsche-lab/blik#README.md
    Source Code = https://github.com/gutsche-lab/blik
    User Support = https://github.com/gutsche-lab/blik/issues
    Changelog = https://github.com/gutsche-lab/blik/blob/main/CHANGELOG.md

[options]
zip_safe = False
packages = find:
python_requires = >= 3.8
include_package_data = True
setup_requires =
    setuptools_scm
install_requires =
    napari>=0.4.12
    numpy
    dask
    pandas
    scipy
    pyqtgraph
    click
    dynamotable==0.2.4
    eulerangles==1.0.1
    mrcfile==1.3.0
    starfile==0.4.5
    emfile==0.3


[options.extras_require]
testing =
    tox
    pytest
    pytest-qt
    pyqt5
dev =
    black
    flake8
    isort
    pre-commit
    %(testing)s


[options.entry_points]
console_scripts =
    blik = blik.__main__:cli


[options.package_data]
* = *.txt, *.md

[bdist_wheel]
universal = 1

[flake8]
exclude = docs,_version.py,.eggs,examples
max-line-length = 120
docstring-convention = numpy

[isort]
profile = black
src_paths = blik
